--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
 
 body {
   text-align: center;
-  background-color: black;
+  background-color: Black;
   font-family: "Courier New";
   overflow-x: hidden;
   padding-right: 20px;
